Design and Funcs

--- a/css/index.css
+++ b/css/index.css
@@ -163,7 +163,8 @@ body {
 }
 
 #user i {
-    margin-right: 10px; /* You can adjust the value according to your preference */
+    margin-right: 10px;
+    /* You can adjust the value according to your preference */
 }
 
 
