--- a/css/index.css
+++ b/css/index.css
@@ -14,9 +14,6 @@ body {
 
 .main-system {
     display: block;
-    background-size: contain solid;
-    background-repeat: no-repeat;
-    background-position: 50%;
     background-color: var(--background-color);
     height: 100vh;
     overflow: hidden;
@@ -24,12 +21,20 @@ body {
 }
 
 .main-system.inmenu {
-    background-image: none;
     background-color: var(--background-color);
     height: 100vh;
     overflow: hidden;
-    position: relative;
 }
+
+.apps-container {
+    width: calc(100% - 20vw); /* Adjust the value accordingly */
+    height: 100vh;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    margin-left: 20vw;
+}
+
 
 .start-menu {
     position: fixed;
@@ -54,17 +59,16 @@ body {
 
 
 .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: #333;
-    color: #fff;
+    display: block;
     width: 20vw;
     max-width: 250px;
-    height: 100vh;
+    height: 100%;
+    font-size: 12px;
+    box-shadow: inset -1px 0 0 rgba(255, 255, 255, 0.1);
+    background-color: var(--background-color);
+    position: fixed !important;
+    z-index: 1;
     overflow: hidden;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
-    padding: 20px;
 }
 
 .sidebar img {
@@ -84,99 +88,46 @@ body {
     margin-bottom: 15px;
     font-size: 12px;
     position: relative;
+    cursor: pointer;
 }
 
 .sidebar li img {
     margin-right: 10px;
 }
 
+.sidebar ul li button {
+    display: block;
+    width: 100%;
+    background-color: var(--red);
+    border: 1px solid transparent;
+    border-radius: 3px;
+    color: #fff;
+    font-size: 14px;
+    cursor: pointer;
+    padding: 0;
+}
 
+.sidebar-footer {
+    position: absolute;
+    bottom: 50px;
+    left: 0;
+    width: 100%;
+    padding: 20px;
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.tab-content {
+    display: none;
+}
+
+.tab-content.active {
+    display: block;
+}
 
 .apps ul {
     list-style-type: none;
 }
 
-.user-header {
-    display: none;
-    height: 50px;
-    background-color: var(--polizei-logo);
-}
-
-.user-header img {
-    height: 50px;
-}
-
-.taskbar img {
-    width: 50px;
-    height: 50px;
-    object-fit: contain;
-}
-
-.loader-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--background-color);
-    height: 100vh;
-}
-
-.logo {
-    width: 20%;
-    height: auto;
-    margin-bottom: 100px;
-}
-
-.horizontal-loader {
-    width: 60%;
-    height: 20px;
-    background-color: var(--polizei-logo);
-    border-radius: 10px;
-    margin-bottom: 20px;
-}
-
-.horizontal-loader-progress {
-    width: 0;
-    height: 100%;
-    background-color: var(--red);
-    animation: progress 2s ease-in-out forwards;
-    border-radius: 10px;
-}
-
-@keyframes progress {
-    0% {
-        width: 0;
-    }
-
-    10% {
-        width: 20%;
-    }
-
-    30% {
-        width: 25%;
-    }
-
-    50% {
-        width: 60%;
-    }
-
-    90% {
-        width: 80%;
-    }
-
-    100% {
-        width: 100%;
-    }
-}
-
-.taskbar {
-    background-color: var(--polizei-logo);
-    display: flex;
-    padding: 10px 20px;
-    position: fixed;
-    bottom: 0;
-    width: 100vw;
-}
 
 #user i {
     margin-right: 10px;
@@ -189,11 +140,6 @@ body {
 .datetime {
     display: flex;
     align-items: center;
-}
-
-.power-btn {
-    margin-right: 20px;
-    /* Abstand zwischen Power Button und Apps */
 }
 
 .datetime {
@@ -218,8 +164,6 @@ body {
     border: 2px solid var(--border-color);
     border-radius: 25px;
     padding: 20px;
-    margin: 20px;
-    width: 70%;
     background-color: var(--background-color);
     box-shadow: 0px 0px 10px 0px var(--shadow-color);
     overflow: hidden;
@@ -227,7 +171,6 @@ body {
 
 .callform {
     font-size: 1.5rem;
-    margin-top: 15px;
 }
 
 .form-group {
@@ -308,9 +251,6 @@ input::-webkit-inner-spin-button {
     width: 100%;
 }
 
-
-
-
 .active-calls-container {
     display: flex;
     flex-wrap: wrap;
@@ -383,7 +323,6 @@ input::-webkit-inner-spin-button {
     border: 2px solid var(--border-color);
     border-radius: 25px;
     padding: 20px;
-    margin: 20px;
     width: 30%;
     color: var(--text-color);
     background-color: var(--background-color);
@@ -436,7 +375,6 @@ input::-webkit-inner-spin-button {
     padding: 2px;
     border: 1px solid currentColor;
     border-radius: 5px;
-    margin: 0 0 30px;
 }
 
 .searchVeh input[type="search"] {
@@ -498,7 +436,6 @@ input::-webkit-inner-spin-button {
     border: 2px solid var(--border-color);
     border-radius: 25px;
     padding: 20px;
-    margin: 20px;
     width: 70%;
     color: var(--text-color);
     background-color: var(--background-color);
@@ -738,6 +675,7 @@ select {
         transform: translateX(100%);
         opacity: 0;
     }
+
     100% {
         transform: translateX(0);
         opacity: 1;
