--- a/css/index.css
+++ b/css/index.css
@@ -60,6 +60,7 @@ body {
 
 .sidebar {
     display: block;
+    color: var(--text-color);
     width: 20vw;
     max-width: 250px;
     height: 100%;
@@ -75,7 +76,7 @@ body {
     width: 30px;
     height: 30px;
     object-fit: contain;
-    border: 2px solid #fff;
+    border: 0.5px solid #fff;
     border-radius: 1px;
 }
 
@@ -85,10 +86,17 @@ body {
 }
 
 .sidebar li {
+    display: flex;
+    align-items: center;
     margin-bottom: 15px;
     font-size: 12px;
     position: relative;
     cursor: pointer;
+}
+
+
+.sidebar .active {
+    color: var(--secondary-color);
 }
 
 .sidebar li img {
@@ -594,8 +602,6 @@ input::-webkit-inner-spin-button {
     border: 2px solid var(--border-color);
     border-radius: 25px;
     padding: 20px;
-    margin: 20px;
-    width: 30%;
     background-color: var(--background-color);
     box-shadow: 0px 0px 10px 0px var(--shadow-color);
     overflow: hidden;
