--- a/css/logout.css
+++ b/css/logout.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
+    background-color: var(--background-color);
     margin: 0;
     display: flex;
     justify-content: center;
@@ -9,20 +9,21 @@ body {
 }
 
 .logout-container {
-    background-color: #fff;
+    background-color: var(--background-color);
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     padding: 20px;
     text-align: center;
 }
 
 .message {
-    color: #333;
+    color: var(--text-color);
+    font-size: 20px;
     margin-bottom: 20px;
 }
 
 link {
-    color: #3498db;
+    color: var(--secondary-color);
 }
 
 link:hover {
