--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,8 @@
+/* INDEX.CSS */
 body {
     margin: 0;
     padding: 0;
-    background: none;
+    background: var(--background-color);
     color: var(--text-color);
     font-family: 'Roboto Mono', monospace;
     font-weight: 800;
@@ -14,59 +15,17 @@ body {
 
 .main-system {
     display: block;
-    background-color: var(--background-color);
-    height: 100vh;
-    overflow: hidden;
-    position: relative;
 }
-
-.main-system.inmenu {
-    background-color: var(--background-color);
-    height: 100vh;
-    overflow: hidden;
-}
-
-.apps-container {
-    width: calc(100% - 20vw); /* Adjust the value accordingly */
-    height: 100vh;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    margin-left: 20vw;
-}
-
-
-.start-menu {
-    position: fixed;
-    bottom: 40px;
-    left: 20px;
-    background-color: var(--background-color);
-    color: var(--text-color);
-    padding: 10px;
-    border-radius: 5px;
-    display: none;
-    overflow: hidden;
-}
-
-.start-button {
-    background-color: var(--secondary-color);
-    color: var(--text-color);
-    padding: 10px 20px;
-    border: none;
-    cursor: pointer;
-    overflow: hidden;
-}
-
 
 .sidebar {
     display: block;
     color: var(--text-color);
+    background-color: var(--background-color);
     width: 20vw;
-    max-width: 250px;
+    max-width: 300px;
     height: 100%;
     font-size: 12px;
     box-shadow: inset -1px 0 0 rgba(255, 255, 255, 0.1);
-    background-color: var(--background-color);
     position: fixed !important;
     z-index: 1;
     overflow: hidden;
@@ -76,13 +35,14 @@ body {
     width: 30px;
     height: 30px;
     object-fit: contain;
-    border: 0.5px solid #fff;
+    border: 0.5px solid var(--text-color);
     border-radius: 1px;
 }
 
 .sidebar ul {
     list-style: none;
     padding: 0;
+    margin: 10px;
 }
 
 .sidebar li {
@@ -109,7 +69,7 @@ body {
     background-color: var(--red);
     border: 1px solid transparent;
     border-radius: 3px;
-    color: #fff;
+    color: var(--text-color);
     font-size: 14px;
     cursor: pointer;
     padding: 0;
@@ -124,111 +84,52 @@ body {
     border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
 
-.tab-content {
-    display: none;
+.apps-container {
+    background-color: var(--background-color);
+    margin-left: 20%;
 }
 
-.tab-content.active {
+.title {
+    font-size: 25px;
+    font-weight: 800;
+    margin-bottom: 20px;
+    text-decoration: underline;
+}
+
+.tab-content {
+    display: none;
+    background-color: var(--background-color);
+}
+
+.active {
     display: block;
 }
 
-.apps ul {
-    list-style-type: none;
-}
-
-
-#user i {
-    margin-right: 10px;
-    /* You can adjust the value according to your preference */
-}
-
-
-.power-btn,
-.apps,
-.datetime {
-    display: flex;
-    align-items: center;
-}
-
-.datetime {
-    margin-left: auto;
-    margin-right: 0.5rem;
-}
-
-.panicbutton {
-    margin-right: 2rem;
-}
-
-.date,
-.time {
-    color: var(--text-color);
-    margin-right: 10px;
-}
-
-.call-infos {
-    position: relative;
-    font-family: Arial, sans-serif;
-    font-size: 1.5rem;
-    border: 2px solid var(--border-color);
-    border-radius: 25px;
+.user-settings-main,
+.new-call-main,
+.car-main,
+.searchpersons-main,
+.note-main,
+.active-calls-main {
     padding: 20px;
-    background-color: var(--background-color);
-    box-shadow: 0px 0px 10px 0px var(--shadow-color);
-    overflow: hidden;
-}
-
-.callform {
-    font-size: 1.5rem;
+    border: 1px solid var(--border-color);
+    border-radius: 10px;
 }
 
 .form-group {
     margin-bottom: 20px;
 }
 
-.label {
-    font-size: 1.2rem;
-    color: var(--secondary-color);
-}
-
-.form-group input,
-textarea,
-select {
-    display: flex;
-    background-color: var(--background-color);
-    resize: none;
-    max-width: 60vw;
-    color: var(--text-color);
-    padding: 10px;
-    border: 1px solid var(--border-color);
-    border-radius: 10px;
-}
-
-input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-}
-
-.input {
-    font-size: 1rem;
-    padding: 10px;
-    border: 1px solid var(--border-color);
-    border-radius: 5px;
-    width: 100%;
-}
-
-
 .submit-button {
     display: block;
     width: 30%;
-    height: 3rem;
     line-height: 40px;
     font-size: 18px;
-    font-family: sans-serif;
-    text-decoration: none;
     border: none;
     background-color: var(--secondary-color);
     color: var(--text-color);
     border-radius: 10px;
-    letter-spacing: 2px;
+    letter-spacing: 20px;
     text-align: center;
     position: relative;
     transition: all .35s;
@@ -257,445 +158,4 @@ input::-webkit-inner-spin-button {
 
 .submit-button:hover:after {
     width: 100%;
-}
-
-.active-calls-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 5px;
-    /* Abstand zwischen den Boxen */
-}
-
-.active-call-infos {
-    position: relative;
-    font-family: Arial, sans-serif;
-    font-size: 1.5rem;
-    border: 2px solid var(--border-color);
-    border-radius: 25px;
-    padding: 20px;
-    margin: 20px;
-    width: 20%;
-    background-color: var(--background-color);
-    box-shadow: 0px 0px 10px 0px var(--shadow-color);
-    overflow: hidden;
-}
-
-.active-callform {
-    font-size: 1.5rem;
-    margin-top: 15px;
-}
-
-.form-group {
-    margin-bottom: 10px;
-}
-
-.label {
-    font-size: 1rem;
-    color: var(--secondary-color);
-}
-
-.form-group span {
-    display: block;
-    margin-top: 5px;
-    color: var(--text-color);
-}
-
-.form-group span.call-number-sp,
-.form-group span.firstName-sp,
-.form-group span.lastName-sp,
-.form-group span.postCode-sp {
-    padding: 10px;
-    border: 1px solid var(--border-color);
-    border-radius: 10px;
-}
-
-.input {
-    font-size: 1rem;
-    width: 100%;
-}
-
-.namecontainer {
-    display: flex;
-    flex-direction: row;
-}
-
-.namecontainer span {
-    width: 100vh;
-}
-
-
-.car-infos {
-    position: relative;
-    font-family: Arial, sans-serif;
-    font-size: 2rem;
-    border: 2px solid var(--border-color);
-    border-radius: 25px;
-    padding: 20px;
-    width: 30%;
-    color: var(--text-color);
-    background-color: var(--background-color);
-    box-shadow: 0px 0px 10px 0px var(--shadow-color);
-}
-
-.cardetails {
-    font-size: 1rem;
-    margin-top: 15px;
-}
-
-.details-item {
-    margin-bottom: 15px;
-    display: flex;
-    align-items: center;
-}
-
-.details-item i {
-    margin-right: 10px;
-    color: var(--accent-color);
-}
-
-.divider {
-    height: 2px;
-    background-color: var(--border-color);
-    margin-top: 25px;
-}
-
-.owner,
-.plate,
-.job {
-    font-weight: bold;
-    margin-bottom: 5px;
-    color: var(--secondary-color);
-}
-
-.ownerholder,
-.plateholder,
-.jobholder {
-    font-weight: 300;
-    color: var(--polizei-logo);
-}
-
-.searchVeh {
-    position: absolute;
-    right: 10px;
-    top: 20px;
-    color: var(--text-color);
-    display: flex;
-    padding: 2px;
-    border: 1px solid currentColor;
-    border-radius: 5px;
-}
-
-.searchVeh input[type="search"] {
-    border: none;
-    background: transparent;
-    margin: 0;
-    padding: 7px 8px;
-    font-size: 14px;
-    color: inherit;
-    border: 1px solid transparent;
-    border-radius: inherit;
-}
-
-.searchVeh input[type="search"]::placeholder {
-    color: var(--placeholder-color);
-}
-
-.searchVeh button[type="submit"] {
-    text-indent: -999px;
-    overflow: hidden;
-    width: 40px;
-    padding: 0;
-    margin: 0;
-    border: 1px solid transparent;
-    border-radius: inherit;
-    background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat center;
-    cursor: pointer;
-    opacity: 0.7;
-}
-
-.searchVeh button[type="submit"]:hover {
-    opacity: 1;
-}
-
-.searchVeh button[type="submit"]:focus,
-.searchVeh input[type="search"]:focus {
-    box-shadow: 0 0 3px 0 var(--polizei-logo);
-    border-color: var(--polizei-logo);
-    outline: none;
-}
-
-.searchVeh.nosubmit {
-    border: none;
-    padding: 0;
-}
-
-.searchVeh input.nosubmit {
-    border: 1px solid var(--border-color);
-    width: 100%;
-    padding: 9px 4px 9px 40px;
-    background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat 13px center;
-}
-
-
-.person-infos {
-    position: relative;
-    font-family: Arial, sans-serif;
-    font-size: 2rem;
-    border: 2px solid var(--border-color);
-    border-radius: 25px;
-    padding: 20px;
-    width: 70%;
-    color: var(--text-color);
-    background-color: var(--background-color);
-    box-shadow: 0px 0px 10px 0px var(--shadow-color);
-}
-
-.personContainer {
-    font-size: 1rem;
-    margin-top: 15px;
-}
-
-.person {
-    margin-bottom: 15px;
-    display: flex;
-    align-items: center;
-}
-
-
-.person-name,
-.person-dob,
-.person-height,
-.person-phonenumber,
-.person-job {
-    font-weight: bold;
-    margin-bottom: 5px;
-    color: var(--secondary-color);
-}
-
-.person-nameholder,
-.person-dobholder,
-.person-heightholder,
-.person-phonenumberholder,
-.person-jobholder {
-    font-weight: 300;
-    color: var(--polizei-logo);
-}
-
-.searchPers {
-    position: absolute;
-    right: 10px;
-    top: 20px;
-    color: var(--text-color);
-    display: flex;
-    padding: 2px;
-    border: 1px solid currentColor;
-    border-radius: 5px;
-    margin: 0 0 30px;
-}
-
-.searchPers input[type="search"] {
-    border: none;
-    background: transparent;
-    margin: 0;
-    padding: 7px 8px;
-    font-size: 14px;
-    color: inherit;
-    border: 1px solid transparent;
-    border-radius: inherit;
-}
-
-.searchPers input[type="search"]::placeholder {
-    color: var(--placeholder-color);
-}
-
-.searchPers button[type="submit"] {
-    text-indent: -999px;
-    overflow: hidden;
-    width: 40px;
-    padding: 0;
-    margin: 0;
-    border: 1px solid transparent;
-    border-radius: inherit;
-    background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat center;
-    cursor: pointer;
-    opacity: 0.7;
-}
-
-.searchPers button[type="submit"]:hover {
-    opacity: 1;
-}
-
-.searchPers button[type="submit"]:focus,
-.searchPers input[type="search"]:focus {
-    box-shadow: 0 0 3px 0 var(--polizei-logo);
-    border-color: var(--polizei-logo);
-    outline: none;
-}
-
-.searchPers.nosubmit {
-    border: none;
-    padding: 0;
-}
-
-.searchPers input.nosubmit {
-    border: 1px solid var(--border-color);
-    width: 100%;
-    padding: 9px 4px 9px 40px;
-    background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat 13px center;
-}
-
-
-.noteField {
-    display: flex;
-    flex-direction: column;
-}
-
-#titleNote {
-    max-width: 20vw;
-    height: 2rem;
-    resize: none;
-    margin: 10px;
-    background-color: var(--background-color-bright);
-    border: none;
-    border-radius: 5px;
-    color: var(--text-color);
-    vertical-align: top;
-}
-
-.noteField textarea {
-    min-width: 50vw;
-    min-height: 40vh;
-    resize: none;
-    margin: 10px;
-    background-color: var(--background-color-bright);
-    border: none;
-    border-radius: 10px;
-    color: var(--text-color);
-    vertical-align: top;
-}
-
-.buttonHolder {
-    display: flex;
-}
-
-.buttonHolder button {
-    font-size: 1rem;
-    color: var(--polizei-logo);
-    background-color: var(--background-color);
-    border: 1px solid var(--border-color);
-    box-shadow: 100px;
-    margin: 1px;
-    border-radius: 10px;
-    height: 30px;
-}
-
-.buttonHolder button:hover {
-    color: var(--text-color);
-    background-color: var(--polizei-logo);
-    border: 1px solid var(--polizei-logo);
-}
-
-.user-settings-cont {
-    position: relative;
-    font-family: Arial, sans-serif;
-    font-size: 1.5rem;
-    border: 2px solid var(--border-color);
-    border-radius: 25px;
-    padding: 20px;
-    background-color: var(--background-color);
-    box-shadow: 0px 0px 10px 0px var(--shadow-color);
-    overflow: hidden;
-}
-
-.user-settings-cont h1 {
-    text-align: center;
-    color: var(--text-color);
-}
-
-.new-password .label {
-    font-size: 1.2rem;
-    color: var(--secondary-color);
-}
-
-.user-settings-cont input,
-textarea,
-select {
-    display: flex;
-    background-color: var(--background-color);
-    resize: none;
-    max-width: 60vw;
-    color: var(--text-color);
-    padding: 10px;
-    border: 1px solid var(--border-color);
-    border-radius: 10px;
-}
-
-
-.new-password {
-    margin-top: 20px;
-}
-
-.new-password label {
-    display: block;
-    margin-bottom: 5px;
-    color: var(--background-color);
-}
-
-.new-password input {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    box-sizing: border-box;
-}
-
-.new-password button {
-    background-color: var(--secondary-color);
-    color: var(--text-color);
-    padding: 10px 15px;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
-}
-
-.new-password button:hover {
-    background-color: var(--secondary-color);
-}
-
-.notification {
-    position: fixed;
-    bottom: 100px;
-    right: 20px;
-    padding: 20px;
-    background-color: #444;
-    color: #fff;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    z-index: 1000;
-    transition: opacity 0.5s ease-in-out;
-    animation: slideIn 0.5s ease-out;
-    margin-bottom: 10px;
-}
-
-@keyframes slideIn {
-    0% {
-        transform: translateX(100%);
-        opacity: 0;
-    }
-
-    100% {
-        transform: translateX(0);
-        opacity: 1;
-    }
-}
-
-.notification.success {
-    background-color: #4CAF50;
-}
-
-.notification.warning {
-    background-color: #ff9800;
-}
-
-.notification.error {
-    background-color: #f44336;
 }
