Design and functionality

--- a/css/var.css
+++ b/css/var.css
@@ -9,7 +9,7 @@
     --border-color: #ccc;
     --shadow-color: rgba(0, 0, 0, 0.1);
     --hover-color: #45a049;
-    --placeholder-color: #bbb;
+    --placeholder-color: #fafafa;
     --link-color: #3498db;
     --error-color: #ff0000;
     --success-color: #45a049;
