--- a/css/index.css
+++ b/css/index.css
@@ -54,7 +54,6 @@ body {
     cursor: pointer;
 }
 
-
 .sidebar .active {
     color: var(--secondary-color);
 }
@@ -109,16 +108,89 @@ body {
 .new-call-main,
 .car-main,
 .searchpersons-main,
-.note-main,
-.active-calls-main {
+.note-main{
     padding: 20px;
     border: 1px solid var(--border-color);
     border-radius: 10px;
 }
 
+
+.active-calls-container-holder {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+    /* Abstand zwischen den Boxen */
+}
+
+.active-call-container {
+    position: relative;
+    font-size: 1.5rem;
+    border: 1px solid var(--border-color);
+    border-radius: 10px;
+    padding: 20px;
+    width: 20%;
+    overflow: hidden;
+}
+
+.active-calls-form {
+    font-size: 1.5rem;
+    margin-top: 15px;
+}
+
+.form-group span {
+    width: 100%;
+    height: 20px;
+    font-size: 18px;
+    color: var(--secondary-color);
+    margin-bottom: 5px;
+    border: 1px solid var(--border-color);
+    border-radius: 5px;
+}
+
+.namecontainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 .form-group {
+    display: flex;
+    flex-direction: column;
     margin-bottom: 20px;
 }
+
+label {
+    font-size: 18px;
+    color: var(--secondary-color);
+    margin-bottom: 5px;
+}
+
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+
+input {
+    color: var(--text-color);
+    background-color: var(--background-color);
+    height: 40px;
+    border: 1px solid var(--border-color);
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+input::placeholder {
+    color: var(--placeholder-color);
+}
+
+select {
+    background-color: var(--background-color);
+    height: 40px;
+    border: 1px solid var(--border-color);
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+
 
 .submit-button {
     display: block;
@@ -158,4 +230,42 @@ body {
 
 .submit-button:hover:after {
     width: 100%;
+}
+
+.note-container {
+    padding: 20px;
+}
+
+select, #titleNote, .editor {
+    width: 100%;
+    padding: 10px;
+    color: var(--text-color);
+    background-color: var(--background-color);
+    margin-bottom: 15px;
+    box-sizing: border-box;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 16px;
+    outline: none;
+}
+
+.buttonHolder {
+    display: flex;
+    justify-content: space-between;
+}
+
+button {
+    padding: 10px;
+    width: 30%;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    color: #fff;
+    background-color: #3498db;
+    transition: background-color 0.3s ease;
+}
+
+button:hover {
+    background-color: #2980b9;
 }
